fix the manga editor on small screens

--- a/src/scss/mangaEditor.scss
+++ b/src/scss/mangaEditor.scss
@@ -7,14 +7,23 @@
   z-index: 19;
   background-color: #000d;
   backdrop-filter: blur(5px);
-  display: flex;
-  flex-direction: column;
-  align-items: center;
-  justify-content: center;
+  overflow: auto;
+  -ms-overflow-style: none;
+  scrollbar-width: none;
+
+  &::-webkit-scrollbar {
+    display: none;
+  }
 
   form {
-    max-width: 100%;
-    padding: 1em;
+    display: flex;
+    flex-direction: column;
+    justify-content: center;
+    min-height: 100%;
+    width: 100%;
+    max-width: 50em;
+    padding: 3em 1em;
+    margin: 0 auto;
   }
 
   .manga-editor-buttons {
